# deepmindly

./: .gitignore  README.md  config.yaml  dashboard.py  main.py  pyproject.toml  requirements.txt
core/: __init__.py  config.py  formatting.py  logging_setup.py
core/ai/: __init__.py  brain.py  namer.py  vectors.py
core/db/: __init__.py  connect.py  history.py  storage.py
core/os/: __init__.py  cleaner.py  watcher.py
