[project]
name = "deepmindly"
version = "0.1.0"
description = "DeepMindly — локальный AI-трекер активности"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pywin32>=312",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "sentencepiece>=0.2.2",
    "streamlit>=1.59.2",
]
